# rust-api-boilerplate

./: .dockerignore  .env  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  debug-container.sh
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_visit_table.rs
src/: app.rs  config.rs  database.rs  error.rs  handlers.rs  main.rs  middleware.rs  models.rs  routes.rs
src/config/: app.rs  database.rs  mod.rs
src/database/: connection.rs  health.rs  migrate.rs  mod.rs
src/entities/: mod.rs  visit.rs
src/error/: app_error.rs
src/handlers/: greeting.rs  health.rs  mod.rs  visit.rs
src/models/: common.rs  greeting.rs  mod.rs  visit.rs
src/services/: greeting.rs  mod.rs  visit.rs
src/utils/: extractors.rs  mod.rs
